style(services): apply google java format